--- a/e_waste_management/templates/register.html
+++ b/e_waste_management/templates/register.html
@@ -5,50 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Waste | Register</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
 </head>
 <body>
-    <div style="background-color: #f5f5f5; padding-top: 20px;padding-bottom: 100px;
-    padding-left: 20px;
-    padding-right: 20px; border-radius: 10px; width: 500px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin: 0 auto; margin-top: 100px; margin-bottom: 50px;">
+    <div class="style1">
 
-        <h1 style="text-align: center;">Register</h1>
+        <h1 class="style2">Register</h1>
         <form action="#" method="POST">
-            <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;" 
+            <p class="style3"><input class="style4" 
                 type="text" placeholder="Username" name="username" required></p>
     
-            <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;"
+            <p class="style5"><input class="style6"
                  type="password" placeholder="Password" name="password" required></p>
     
-            <p style="text-align: center;"><input input style="width: 400px; height: 30px; font-size: 15px;"
+            <p class="style7"><input class="style8"input
                  type="password" placeholder="Confirm Password" name="password" required></p>
     
-            <button type="submit" class="btn" style="margin-left: 200px; color: white;
-            border: none; background-color: rgb(0, 140, 255);padding: 10px; border-radius: 50px; 
-            font-size: 15px;"
-            onmouseover="this.style.color='red';" onmouseout="this.style.color='white';">Register</button>
+            <button type="submit" class="btn">Register</button>
     
-            <p style="text-align: center;">Already have an account?</p>
-            <a href="{% url 'login' %}" style="margin-left: 220px;">Login</a>
+            <p  class="style9">Already have an account?</p>
+            <a class="style10" href="{% url 'login' %}">Login</a>
 
-            <p><button style="margin-top: 30px; margin-left: 180px; border-radius: 50px;
-                padding: 5px; background-color: white;">
-                <img src="{% static 'images/Google.jpg' %}" alt="My Image" 
-                style="    
-                width: 20px;
-                height: 20px;
-                border-radius: 50px;
-                margin-left: 10px;">
-                Continue With Google</button></p>
-                <p><button style="margin-top: 10px; margin-left: 180px; border-radius: 50px;
-                padding: 5px; background-color: white;">
-                <img src="{% static 'images/Facebook.jpg' %}" alt="My Image" 
-                style="    
-                width: 30px;
-                height: 30px;
-                border-radius: 50px;
-                margin-left: 10px;">
+            <p><button class="style11">
+                <img src="{% static 'images/Google.jpg' %}" alt="My Image" class="style12">
+                Continue With Google</button>
+            </p>
+                <p><button class="style13">
+                <img src="{% static 'images/Facebook.jpg' %}" alt="My Image" class="style14">
                 Continue with Facebook</button></p>
         </form>
     </div>
