--- a/e_waste_management/templates/resetpassword.html
+++ b/e_waste_management/templates/resetpassword.html
@@ -5,26 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forget Password</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/resetpassword.css' %}">
 </head>
 <body>
         
-    <div style="background-color: #f5f5f5; padding-top: 20px;padding-bottom: 100px;
-    padding-left: 20px;
-    padding-right: 20px; border-radius: 10px; width: 500px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); margin: 0 auto; margin-top: 100px; margin-bottom: 50px;">
+    <div class="style1">
 
-        <h1 style="text-align: center;">Forgot Password</h1>
-        <p style="text-align: center;">Enter your new password and then comfirm your password</p>
+        <h1 class="style2">Forgot Password</h1>
+        <p class="style3">Enter your new password and then confirm your password</p>
         <form action="#" method="POST">
 
-            <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;" 
-                type="text" placeholder="New password" name="email" required></p>
+            <p class="style4"><input class="style5" 
+                type="password" placeholder="New password" name="email" required>
+            </p>
 
-            <p style="text-align: center;"><input style="width: 400px; height: 30px; font-size: 15px;" 
-                type="text" placeholder="Confirm password" name="email" required></p>
+            <p class="style6"><input class="style7" 
+                type="password" placeholder="Confirm password" name="email" required>
+            </p>
         </form>
-        <a href="{% url 'login' %}" style="margin-left: 200px;">Back to Login</a>
+        <a class="style8" href="{% url 'login' %}">Back to Login</a>
     </div> 
 </body>
 </html>
