--- a/e_waste_management/templates/about.html
+++ b/e_waste_management/templates/about.html
@@ -27,12 +27,15 @@
         
 
     <h1>About Us</h1>
-    <p>EnviroServe Kenya aims to address these challenge of improper electronic disposal by 
-        introducing an innovative website-based e-waste collection service. 
-        This platform will allow individuals and businesses to schedule pickups for responsible 
-        disposal of electronic devices, ensuring environmentally-friendly recycling practices. 
-        Through this service, we aim to reach a wider population, educate the public on sustainable 
-        recycling, and help reduce the negative environmental impact of e-waste.</p>
+    <div class="info">
+            <p class="container">EnviroServe Kenya aims to address these challenge of improper electronic disposal by 
+            introducing an innovative website-based e-waste collection service. 
+            This platform will allow individuals and businesses to schedule pickups for responsible 
+            disposal of electronic devices, ensuring environmentally-friendly recycling practices. 
+            Through this service, we aim to reach a wider population, educate the public on sustainable 
+            recycling, and help reduce the negative environmental impact of e-waste.</p>
+            <img src="{% static 'images/e-waste7.jpeg' %}" alt="" class="image2">
+    </div>
 
         <footer class="footer">
             <div class="div1">
