--- a/e_waste_management/templates/learnmore.html
+++ b/e_waste_management/templates/learnmore.html
@@ -26,36 +26,56 @@
             </header>
         
     <h1>How it works</h1>
+
+<div class="divisions">
+    <div class="box">
+    <p><img src="{% static 'images/login.jpg' %}" alt="" class="img1"></p>
     <p><b>Creating an Account & Logging In:</b></p>
         <p>
             Users can visit the website and sign up for an account. During sign-up, they’ll provide basic information like name, contact details, and location.
             Once registered, users can log in to access the full features of the service.
-    
         </p>
+    </div>
 
+    <div class="box"> 
+        <p><img src="{% static 'images/requesting.jpg' %}" alt="" class="img2"></p>  
         <p><b>Requesting E-Waste Collection:</b></p>
         <p>
             On the user dashboard, there’s an option to request an e-waste collection.
         Users fill in details about the type and amount of electronic waste they need to dispose of. This could include items like old phones, computers, televisions, etc.
         Users manually input their address or select from available pre-filled address options, ensuring accurate collection scheduling.
         </p>
+    </div> 
 
+    <div class="box">
+        <p><img src="{% static 'images/scheduling.jpg' %}" alt="" class="img3"></p>
         <p><b>Scheduling Pickups:</b></p>
         <p>
             After providing the necessary details, users can select a convenient time for their e-waste pickup.
         Once the details are submitted, the system sends a confirmation notification with the pickup time and date.
         </p>
+    </div>
 
+    <div class="box">
+        <p><img src="{% static 'images/tracking.jpg' %}" alt="" class="img4"></p>
         <p><b>Tracking Collection Status:</b></p>
         <p>
             Users can track the status of their request in real-time through the website. This feature will show if their request has been received, if the collection is in progress, or if it has been completed.
             Notifications will also be sent to remind users of the scheduled collection time.
         </p>
+    </div>
+
+    <div class="box">
+        <p><img src="{% static 'images/mapping.jpg' %}" alt="" class="img5"></p>
         <p><b>Collection Point Mapping:</b></p>
         <p>
             If a user is unable to schedule a pickup or prefers to drop off their e-waste, the website will provide a list of nearby e-waste collection points.
             Users can search or filter by location to find the most convenient drop-off centers in their area.
         </p>
+    </div>
+
+    <div class="box">
+        <p><img src="{% static 'images/education.jpg' %}" alt="" class="img6"></p>
         <p><b>Educational content:</b></p>
         <p>
         The growing amount of electronic waste (e-waste) has become a significant environmental
@@ -65,12 +85,17 @@
              long-term damage to ecosystems and human health. With rapid advancements in technology, 
              people are constantly 
             upgrading their electronic devices, which leads to an increase in e-waste.</p>
+    </div>
 
-            <p><b>Feedback & Continuous Improvement:</b></p>
+    <div class="box">
+        <p><img src="{% static 'images/feedback.jpg' %}" alt="" class="img7"></p>
+        <p><b>Feedback & Continuous Improvement:</b></p>
         <p>
             After the collection is completed, users can provide feedback on their experience with the service, which helps EnviroServe Kenya improve the platform.
         Users can also suggest features or improvements, ensuring the platform evolves to meet their needs over time.
         </p>
+    </div>
+</div>
 
         <footer class="footer">
             <div class="div1">
