--- a/e_waste_management/static/css/contactus.css
+++ b/e_waste_management/static/css/contactus.css
@@ -1,5 +1,6 @@
 body{
     margin: 0px;
+    background-color: #222;
 }
 .header{
     padding-top: 10px; 
@@ -8,8 +9,8 @@ body{
     background-color: rgb(3, 61, 148);
 }
 .image{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     border-radius: 50px;
     margin-left: 10px;
 }
@@ -31,13 +32,79 @@ body{
 }
 .home:hover, .about:hover, .works:hover, .login:hover, .register:hover, .contact:hover{
     color: red;
-} 
-.style1{
+}
+
+.container {
+    width: 50%;
+    margin: 50px auto;
+    background: #111;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 255, 0, 0.3);
+}
+
+h4 {
+    color: lightgreen;
+    text-align: center;
+}
+
+h1 {
+    color: white;
+    text-align: center;
+    font-size: 24px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+input, textarea {
+    width: 80%;
+    padding: 10px;
+    margin: 10px 0;
+    border: none;
+    border-radius: 5px;
+}
+
+textarea {
+    height: 100px;
+    resize: none;
+}
+
+.submit-btn {
+    background-color: lightgreen;
+    color: black;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.submit-btn:hover {
+    background-color: green;
+    color: white;
+}
+
+.footer{
+    background-color: green; 
+    color: white;
+    margin-top: 80px;
+}
+.div1{
     display: flex;
 }
-.style1{
+.div2{
     margin-left: 400px;
 }
-.style3{
+.div3{
     margin-left: 200px;
+}
+.copyright{
+    text-align: center; 
+    background-color: rgb(48, 45, 45); 
+    height: 30px; 
+    padding-top: 10px;
 }
