--- a/e_waste_management/templates/home.html
+++ b/e_waste_management/templates/home.html
@@ -7,7 +7,6 @@
     <title>E-Waste | Home</title>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
-
 </head>
 <body>
     <header>
@@ -29,6 +28,23 @@
     <section>
         
         <p class="moving-text">Welcome to EnviroServe Kenya Company LTD</p>
+
+  <div class="carousel-container">
+    <div class="carousel">
+        <div class="carousel-item">
+            <img src="{% static 'images/e-waste8.jpeg' %}" alt="Image 1">
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'images/e-waste4.jpg' %}" alt="Image 2">
+        </div>
+        <div class="carousel-item">
+            <img src="{% static 'images/e-waste6.webp' %}" alt="Image 3">
+        </div>
+    </div>
+    <button class="prev-btn" onclick="prevSlide()">&#10094;</button>
+    <button class="next-btn" onclick="nextSlide()">&#10095;</button>
+</div>
+
         
         <div>
 
@@ -133,5 +149,35 @@
 
         <p class="copyright">&copy; 2025 EnviroServe Kenya. All Rights Reserved.</p>
     </footer>
+    <script>
+        let currentIndex = 0;
+
+function showSlide(index) {
+    const carousel = document.querySelector('.carousel');
+    const items = document.querySelectorAll('.carousel-item');
+    const totalItems = items.length;
+
+    if (index >= totalItems) {
+        currentIndex = 0;
+    } else if (index < 0) {
+        currentIndex = totalItems - 1;
+    } else {
+        currentIndex = index;
+    }
+
+    carousel.style.transform = `translateX(-${currentIndex * 100}%)`;
+}
+
+function nextSlide() {
+    showSlide(currentIndex + 1);
+}
+
+function prevSlide() {
+    showSlide(currentIndex - 1);
+}
+
+showSlide(currentIndex);
+
+    </script>
 </body>
 </html>
